--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,12 +94,12 @@ import { Icon } from 'astro-icon'
           Amazon Web Services<br /><br />
             <div style="float: left; padding-right: 8px;">
               <a target="_blank" href="https://www.linkedin.com/in/julianrwood">
-                <img class=".social-icons" src="linkedin-logo.svg" />
+                <img class="social-icons" src="linkedin-logo.svg" />
               </a>
             </div>
             <div>
               <a target="_blank" href="https://twitter.com/julian_wood">
-                <img class=".social-icons" src="twitter-logo.svg" />
+                <img class="social-icons" src="twitter-logo.svg" />
               </a>
             </div> 
         </Speaker>
@@ -110,12 +110,12 @@ import { Icon } from 'astro-icon'
           aleios<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/benjaminellerby/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/EllerbyBen">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div> 
         </Speaker>
@@ -126,12 +126,12 @@ import { Icon } from 'astro-icon'
           Ampt<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/jeremydaly/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/jeremy_daly">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -142,12 +142,12 @@ import { Icon } from 'astro-icon'
           The Burning Monk<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/theburningmonk/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/theburningmonk">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div>  
         </Speaker>
@@ -158,12 +158,12 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/lucianomammino/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/loige">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -174,7 +174,7 @@ import { Icon } from 'astro-icon'
           Accenture | Cloud First<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/simonjgr/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
         </Speaker>
@@ -185,12 +185,12 @@ import { Icon } from 'astro-icon'
           globaldatanet / Serverless Summit<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/marcschroeter/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/marc_schroeter/">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -201,12 +201,12 @@ import { Icon } from 'astro-icon'
           The LEGO Group<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/marcschroeter/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/marc_schroeter/">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -217,12 +217,12 @@ import { Icon } from 'astro-icon'
           Amazon Web Services<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/singledigit/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div>
             <a target="_blank" href="https://twitter.com/edjgeek">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Speaker>
@@ -279,7 +279,7 @@ import { Icon } from 'astro-icon'
           Accenture | Cloud First<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/simonjgr/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -290,7 +290,7 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/peterelger/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
@@ -310,7 +310,7 @@ import { Icon } from 'astro-icon'
             </a>
           </div> 
           <div><a target="_blank" href="https://twitter.com/88_eugen">
-            <img class=".social-icons" src="twitter-logo.svg" />
+            <img class="social-icons" src="twitter-logo.svg" />
           </a>
         </div>
         </Organiser>
@@ -321,12 +321,12 @@ import { Icon } from 'astro-icon'
           fourTheorem<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/lucianomammino/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/loige">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -337,7 +337,7 @@ import { Icon } from 'astro-icon'
           Fastly<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/megan-e-davies/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
@@ -348,7 +348,7 @@ import { Icon } from 'astro-icon'
           IBM<br /><br />
           <div class="organiser-social">
             <a target="_blank" href="https://www.linkedin.com/in/antonwhalley/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div>
         </Organiser>
