--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -306,7 +306,7 @@ import { Icon } from 'astro-icon'
           Examfly<br /><br />
           <div style="float: left; padding-right: 8px;">
             <a target="_blank" href="https://www.linkedin.com/in/eugen-serbanescu-57a78a51/">
-              <img class=".social-icons" src="linkedin-logo.svg" />
+              <img class="social-icons" src="linkedin-logo.svg" />
             </a>
           </div> 
           <div><a target="_blank" href="https://twitter.com/88_eugen">
