--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -295,7 +295,7 @@ import { Icon } from 'astro-icon'
           </div>
           <div>
             <a target="_blank" href="https://twitter.com/pelger">
-              <img class=".social-icons" src="twitter-logo.svg" />
+              <img class="social-icons" src="twitter-logo.svg" />
             </a>
           </div>
         </Organiser>
